# YouTube_AI

./: .dockerignore  .env.example  .gitignore  DEPENDENCY_POLICY.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/backend/app/: main.py  monitoring.py
apps/backend/app/agents/: base.py  compliance_checker.py  script_writer.py  seo_analyzer.py
apps/backend/app/core/: auth_middleware.py  celery.py  config.py  csrf.py  exceptions.py  logging.py  request_context.py  security.py
apps/backend/app/db/: seed.py  session.py
apps/backend/app/integrations/: __init__.py  storage.py  youtube.py  youtube_analytics.py
apps/backend/app/repositories/: __init__.py  analytics.py  base.py  brief.py  channel.py  publication.py  script.py  topic.py  workflow.py
apps/backend/app/schemas/: __init__.py  affiliate.py  analytics.py  auth.py  brief.py  channel.py  common.py  compliance.py  dashboard.py  monetization.py  optimization.py  pipeline.py  product.py  publication.py  script.py  thumbnail.py  topic.py  video.py  workflow.py  youtube.py
apps/backend/app/services/: affiliate.py  analytics.py  brief.py  channel.py  compliance.py  compliance_rules.py  dashboard.py  monetization.py  optimization.py  pipeline.py  product.py  publication.py  refresh_token.py  scoring.py  script.py  topic.py  user.py  video.py  workflow_service.py  youtube.py
apps/backend/app/tasks/: __init__.py  ai.py  analytics.py  media.py  youtube.py
apps/backend/app/workflows/: __init__.py  base.py  content_pipeline.py
apps/backend/tests/: conftest.py  test_analytics_contract.py  test_auth.py  test_csrf.py  test_tenant_authorization.py  test_workflow.py
apps/worker/: .dockerignore  Dockerfile  pyproject.toml
apps/worker/worker/: celery_app.py  config.py  db.py  idempotency.py  image_utils.py  llm_support.py  logging.py  monitoring.py  registry.py
apps/worker/worker/agents/: __init__.py  base.py  compliance.py  compliance_checker.py  content_optimizer.py  errors.py  metadata.py  opportunity_scorer.py  optimization.py  recommender.py  research.py  schemas.py  scout.py  script_writer.py  scriptwriter.py  seo_analyzer.py  thumbnail.py  topic_researcher.py
apps/worker/worker/integrations/: youtube_analytics.py
apps/worker/worker/llm/: __init__.py  config.py  errors.py  provider.py  registry.py  response.py  types.py
(+217 files in other folders)
