[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-media-os-backend"
version = "0.1.0"
description = "AI Media OS — FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.19",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",

    # Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",

    # Auth
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",

    # Redis
    "redis[hiredis]==5.2.1",

    # Task queue
    "celery==5.4.0",
    "kombu==5.4.2",

    # AI / LLM
    "openai==1.58.1",
    "tiktoken==0.8.0",

    # HTTP client
    "httpx==0.28.1",

    # Storage
    "boto3==1.35.88",

    # Crypto (token encryption for YouTube OAuth)
    "cryptography==47.0.0",

    # Utilities
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "orjson==3.10.12",
    "prometheus-client==0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "watchfiles==1.0.3",
    "factory-boy==3.3.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
