[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-media-os-worker"
version = "0.1.0"
description = "AI Media OS — Celery Worker"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]==5.4.0",
    "kombu==5.4.2",
    "redbeat==2.2.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "anthropic==0.41.0",
    "openai==1.58.1",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "redis[hiredis]==5.2.1",
    "boto3==1.35.88",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "watchdog[watchmedo]==6.0.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]
